fix alignment

--- a/pages/programs/programs.module.scss
+++ b/pages/programs/programs.module.scss
@@ -119,6 +119,9 @@
                   h3 {
                     color: #1a3989;
                     font-family: "Helvetica Neue", "Helvetica 45 Light", sans-serif;
+                    height: 100%;
+                    display: inline-flex;
+                    align-items: center;
                   }
                 }
                 .widget-header {
